--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@discordjs/voice": "^0.10.0",
     "discord-api-types": "^0.34.0",
     "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1",
     "libsodium-wrappers": "^0.7.10",
+    "winston": "^3.8.1",
     "yt-search": "^2.10.3",
     "ytdl-core": "^4.11.0"
   },
