--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bot de discord 2022 version inicial",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node index.ts"
+    "build": "npx ts-node index.ts"
   },
   "keywords": [
     "bot",
