--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bot de discord 2022 version inicial",
   "main": "index.js",
   "scripts": {
-    "build": "npx ts-node index.ts"
+    "dev": "npx ts-node index.ts",
+    "build" : "tsc --build",
+    "start" : "node ./dist/index.js"
   },
   "keywords": [
     "bot",
