--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,20 @@
 {
     "compilerOptions": {
-        "esModuleInterop": true,
-        "module": "commonjs",
-        "lib": ["es2020"],    
-        "target": "es2020",
-        "outDir": "/dist",
-    }
-}
+      "strict": false,
+      "outDir": "dist",
+      "module": "commonjs",
+      "target": "es2022",
+      "moduleResolution": "node",
+      "resolveJsonModule": true,
+      "useUnknownInCatchVariables": true,
+      "allowUnreachableCode": false,
+      "esModuleInterop": true,
+      "skipLibCheck": true,
+      "importHelpers": true,
+      "typeRoots": ["node_modules/@types"],
+      "sourceMap": true,
+      "strictPropertyInitialization": false
+    },
+    "include": ["./"],
+    "exclude": ["/.github", "./dist", "./node_modules"]
+  }
